--- a/configure.in.in
+++ b/configure.in.in
@@ -1,4 +1,4 @@
-## configure.in.in for yast2-module-restore
+## configure.in.in for yast2-restore
 ##
 ## 'y2tool y2autoconf' should be called
 ## from Makefile.cvs to get configure.in
