--- a/yast2-restore.spec.in
+++ b/yast2-restore.spec.in
@@ -2,7 +2,7 @@
 # neededforbuild  autoconf automake ycpdoc yast2-testsuite dejagnu expect tcl yast2-base libycp liby2 libyui libscr yast2-core-wfm yast2-core-scr yast2-agent-system libycp-devel yast2-devtools
 
 @HEADER@
-Requires:	yast2 yast2-trans-restore yast2-lib-wizard yast2-lib-sequencer base bzip gzip
+Requires:	yast2 yast2-lib-wizard yast2-lib-sequencer base bzip gzip
 BuildArchitectures:	noarch
 
 Summary:	YaST2 Restore module
