fixed *spec.in and Makefile.am files splitted help text message
svn path=/trunk/restore/; revision=3198

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,14 +1,11 @@
 #
-# Makefile.am for y2m_restore/doc
+# Makefile.am for restore/doc
 #
 # $Id$
 #
 
 SUBDIRS = autodocs
 
-htmldir = $(docdir)
-
 doc_DATA = restore.txt
-html_DATA =
 
-EXTRA_DIST = $(doc_DATA) $(html_DATA)
+EXTRA_DIST = $(doc_DATA)
