--- a/yast2-restore.spec.in
+++ b/yast2-restore.spec.in
@@ -1,8 +1,9 @@
 @HEADER-COMMENT@
-# neededforbuild  autoconf automake ycpdoc yast2-testsuite dejagnu expect tcl yast2-base libycp liby2 libyui libscr yast2-core-wfm yast2-core-scr yast2-agent-system libycp-devel yast2-devtools
+
+# neededforbuild  autoconf automake dejagnu expect tcl yast2 yast2-core yast2-core-devel yast2-devtools yast2-testsuite
 
 @HEADER@
-Requires:	yast2 yast2-lib-wizard yast2-lib-sequencer base bzip gzip
+Requires:	yast2 yast2-core base bzip gzip
 BuildArchitectures:	noarch
 
 Summary:	YaST2 Restore module
@@ -21,10 +22,11 @@ archive created by Backup module.
 
 %files
 %defattr(-,root,root)
-%dir @YAST2DIR@/include/restore
-@YAST2DIR@/include/restore/*
-@YAST2DIR@/clients/restore.ycp
-@YAST2DIR@/clients/restore_*.ycp
-@YAST2DIR@/modules/Restore.ycp
-@YAST2DIR@/menuentries/menuentry_restore.y2cc
-%doc @DOCDIR@
+
+%dir @yncludedir@/restore
+@yncludedir@/restore/*
+@clientdir@/restore.ycp
+@clientdir@/restore_*.ycp
+@moduledir@/Restore.ycp
+@configdir@/restore.y2cc
+%doc @docdir@
