- added help texts for translators - fixed NFS source bug - grub bootloader support - use (old) package manager - fixed #neededforbuild and Requires - yast2-devel-packages, tar - version 2.6.4
svn path=/trunk/restore/; revision=4210

--- a/yast2-restore.spec.in
+++ b/yast2-restore.spec.in
@@ -1,9 +1,9 @@
 @HEADER-COMMENT@
 
-# neededforbuild  autoconf automake dejagnu expect tcl yast2 yast2-core yast2-core-devel yast2-devtools yast2-testsuite yast2-installation
+# neededforbuild  yast2-devel-packages yast2-installation yast2-bootloader
 
 @HEADER@
-Requires:	yast2 yast2-core base bzip gzip yast2-installation
+Requires:	yast2 yast2-core bzip gzip tar yast2-installation yast2-bootloader
 BuildArchitectures:	noarch
 
 Summary:	YaST2 Restore module
