- fixed summary dialog - fixed bootloader configuration - added help texts for translators - version 2.6.5
svn path=/trunk/restore/; revision=4400

--- a/yast2-restore.spec.in
+++ b/yast2-restore.spec.in
@@ -3,7 +3,7 @@
 # neededforbuild  yast2-devel-packages yast2-installation yast2-bootloader
 
 @HEADER@
-Requires:	yast2 yast2-core bzip gzip tar yast2-installation yast2-bootloader
+Requires:	yast2 yast2-core bzip2 gzip tar yast2-installation yast2-bootloader
 BuildArchitectures:	noarch
 
 Summary:	YaST2 Restore module
