install .desktop file
svn path=/trunk/restore/; revision=10808

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -18,7 +18,10 @@ ynclude_DATA =			\
 config_DATA =			\
 	restore.y2cc
 
+desktop_DATA =			\
+	restore.desktop
+
 module_DATA =			\
 	Restore.ycp
 
-EXTRA_DIST = $(client_DATA) $(ynclude_DATA) $(config_DATA) $(module_DATA)
+EXTRA_DIST = $(client_DATA) $(ynclude_DATA) $(config_DATA) $(module_DATA) $(desktop_DATA)
