- added desktop files to file list
svn path=/trunk/restore/; revision=10821

--- a/yast2-restore.spec.in
+++ b/yast2-restore.spec.in
@@ -29,4 +29,5 @@ archive created by Backup module.
 @clientdir@/restore_*.ycp
 @moduledir@/Restore.ycp
 @configdir@/restore.y2cc
+@desktopdir@/restore.desktop
 %doc @docdir@
