--- a/yast2-restore.spec.in
+++ b/yast2-restore.spec.in
@@ -30,4 +30,5 @@ archive created by Backup module.
 @moduledir@/Restore.ycp
 @configdir@/restore.y2cc
 @desktopdir@/restore.desktop
+@ybindir@/restore_parse_pkginfo.pl
 %doc @docdir@
