- fixes for the new interpreter - use Service:: module - version 2.9.1
svn path=/trunk/restore/; revision=13159

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -24,6 +24,9 @@ desktop_DATA =			\
 module_DATA =			\
 	Restore.ycp
 
+include $(top_srcdir)/Makefile.am.common
+
+
 ybin_SCRIPTS = \
 	restore_parse_pkginfo.pl
 
