- .spec file - pack Restore.ybc
svn path=/trunk/restore/; revision=13244

--- a/yast2-restore.spec.in
+++ b/yast2-restore.spec.in
@@ -28,6 +28,7 @@ archive created by Backup module.
 @clientdir@/restore.ycp
 @clientdir@/restore_*.ycp
 @moduledir@/Restore.ycp
+@moduledir@/Restore.ybc
 @configdir@/restore.y2cc
 @desktopdir@/restore.desktop
 @ybindir@/restore_parse_pkginfo.pl
