--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -15,9 +15,6 @@ ynclude_DATA =			\
 	summary_dialog.ycp	\
 	ui.ycp
 
-config_DATA =			\
-	restore.y2cc
-
 desktop_DATA =			\
 	restore.desktop
 
@@ -36,4 +33,4 @@ ycpchook = restore
 
 YCPCFLAGS=-I.
 
-EXTRA_DIST = $(client_DATA) $(ynclude_DATA) $(config_DATA) $(module_DATA) $(desktop_DATA) $(ybin_SCRIPTS)
+EXTRA_DIST = $(client_DATA) $(ynclude_DATA) $(module_DATA) $(desktop_DATA) $(ybin_SCRIPTS)
