let KDE know that these applications should only get started, after switching to root. Important for the settings:/ slave usage (#66735)
svn path=/trunk/restore/; revision=22774

--- a/src/restore.desktop
+++ b/src/restore.desktop
@@ -55,3 +55,4 @@ Name[sl]=Obnovi sistem
 GenericName[sl]=Obnovi datoteke iz varnostnega arhiva
 Name[tr]=Sistem geri yükleme
 GenericName[tr]=Dosyaları yedek arşivinden geri yükler
+X-KDE-SubstituteUID=true
