- changed all icons to contain a 'yast-' prefix - adjusted *.desktop files and renamed icons to have the same filenames   like their corresponding desktop files     --> e.g. a desktop file named hardware.desktop will contain a         'Icon=yast-hardware' entry and the icon will be yast-hardware.png
svn path=/trunk/restore/; revision=23107

--- a/src/restore.desktop
+++ b/src/restore.desktop
@@ -16,7 +16,7 @@ X-SuSE-YaST-Geometry=
 X-SuSE-YaST-SortKey=
 X-SuSE-YaST-AutoInstResource=
 
-Icon=restore
+Icon=yast-restore
 Exec=/sbin/yast2 restore 
 
 Name=Restore system
