--- a/yast2-restore.spec.in
+++ b/yast2-restore.spec.in
@@ -1,6 +1,6 @@
 @HEADER-COMMENT@
 
-# neededforbuild  yast2-devel-packages yast2-installation yast2-bootloader yast2-storage yast2-storage-lib
+# neededforbuild  yast2-devel-packages yast2-installation yast2-bootloader yast2-storage yast2-storage-lib perl-Bootloader limal-bootloader limal limal-perl
 
 @HEADER@
 Requires:	yast2 yast2-core bzip2 gzip tar yast2-installation yast2-bootloader aaa_base
