--- a/yast2-restore.spec.in
+++ b/yast2-restore.spec.in
@@ -2,7 +2,7 @@
 
 
 @HEADER@
-BuildRequires:	yast2-bootloader yast2-devel-packages
+BuildRequires:	yast2-bootloader perl-XML-Writer update-desktop-files yast2 yast2-devtools yast2-testsuite
 Requires:	yast2 yast2-core bzip2 gzip tar yast2-installation yast2-bootloader aaa_base
 BuildArchitectures:	noarch
 
