- Adjusted RPM dependencies: yast2-installation is not needed. - 2.15.1
svn path=/trunk/restore/; revision=36819

--- a/yast2-restore.spec.in
+++ b/yast2-restore.spec.in
@@ -3,7 +3,14 @@
 
 @HEADER@
 BuildRequires:	yast2-bootloader perl-XML-Writer update-desktop-files yast2 yast2-devtools yast2-testsuite
-Requires:	yast2 yast2-core bzip2 gzip tar yast2-installation yast2-bootloader aaa_base
+
+Requires:	aaa_base
+Requires:	bzip2
+Requires:	gzip
+Requires:	tar
+Requires:	yast2
+Requires:	yast2-bootloader
+
 BuildArchitectures:	noarch
 
 Summary:	YaST2 Restore module
