--- a/yast2-restore.spec.in
+++ b/yast2-restore.spec.in
@@ -2,7 +2,7 @@
 
 
 @HEADER@
-BuildRequires:	yast2-bootloader perl-XML-Writer update-desktop-files yast2 yast2-devtools yast2-testsuite
+BuildRequires:	perl-XML-Writer update-desktop-files yast2 yast2-devtools yast2-testsuite
 
 Requires:	aaa_base
 Requires:	bzip2
