Modified makefile to install the new file
svn path=/trunk/restore/; revision=41704

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,7 +8,8 @@ yncludedir = @yncludedir@/restore
 
 client_DATA =			\
 	restore.ycp		\
-	restore_auto.ycp
+	restore_auto.ycp	\
+	restore_bootloader.ycp
 
 ynclude_DATA =			\
 	helps.ycp		\
