added 'StartupNotify=true' to the desktop file (bnc #304964)
svn path=/trunk/restore/; revision=45517

--- a/src/restore.desktop
+++ b/src/restore.desktop
@@ -22,3 +22,4 @@ Exec=/sbin/yast2 restore
 Name=System Restoration
 GenericName=Restore files from a backup archive
 X-KDE-SubstituteUID=true
+StartupNotify=true
