put the PDB texts back into the spec files. summaries first. From now on the SVN is the master source for the texts as far as factory (:head) is concerned. Old products will continue to overwrite the texts from PDB. %descriptions follow next
svn path=/trunk/restore/; revision=57666

--- a/yast2-restore.spec.in
+++ b/yast2-restore.spec.in
@@ -13,7 +13,7 @@ Requires:	yast2-bootloader
 
 BuildArchitectures:	noarch
 
-Summary:	YaST2 Restore module
+Summary:	YaST2 - System Restore
 
 %description
 This package is a part of YaST2. This module can restore system from backup
