--- a/yast2-restore.spec.in
+++ b/yast2-restore.spec.in
@@ -2,6 +2,7 @@
 
 
 @HEADER@
+License: GPL v2 or later
 BuildRequires:	perl-XML-Writer update-desktop-files yast2 yast2-devtools yast2-testsuite
 
 Requires:	aaa_base
