--- a/yast2-restore.spec.in
+++ b/yast2-restore.spec.in
@@ -3,7 +3,7 @@
 
 @HEADER@
 Group:	System/YaST
-License: GPL v2 or later
+License: GPLv2+
 BuildRequires:	perl-XML-Writer update-desktop-files yast2 yast2-devtools yast2-testsuite
 
 Requires:	aaa_base
