use Wizard::SetDesktopFileAndIcon
svn path=/trunk/restore/; revision=66091

--- a/yast2-restore.spec.in
+++ b/yast2-restore.spec.in
@@ -10,7 +10,8 @@ Requires:	aaa_base
 Requires:	bzip2
 Requires:	gzip
 Requires:	tar
-Requires:	yast2
+# Wizard::SetDesktopTitleAndIcon
+Requires:	yast2 >= 2.21.22
 Requires:	yast2-bootloader
 
 BuildArchitectures:	noarch
