YCP Killer: Apply changes needed for Ruby translation
This module needed few changes before it was possible to translate its
YCP files into Ruby. This commit performs them.

The commit is a result of running YCP Killer's "patch" command. The
history of the applied patch is available here:

  https://github.com/yast/ycp-killer/commits/master/patches/restore.patch

See also:

  https://github.com/yast/ycp-killer

--- a/yast2-restore.spec.in
+++ b/yast2-restore.spec.in
@@ -16,6 +16,8 @@ Requires:	yast2-bootloader
 
 BuildArchitectures:	noarch
 
+Requires:       yast2-ruby-bindings >= 1.0.0
+
 Summary:	YaST2 - System Restore
 
 %description
@@ -35,10 +37,9 @@ Backup module.
 
 %dir @yncludedir@/restore
 @yncludedir@/restore/*
-@clientdir@/restore.ycp
-@clientdir@/restore_*.ycp
-@moduledir@/Restore.ycp
-@moduledir@/Restore.ybc
+@clientdir@/restore.rb
+@clientdir@/restore_*.rb
+@moduledir@/Restore.rb
 @desktopdir@/restore.desktop
 @ybindir@/restore_parse_pkginfo.pl
 %doc @docdir@
