YCP Killer: Regenerate Makefile.am files in all source directories
The commit is a result of running YCP Killer's "makefile" command.

See also:

  https://github.com/yast/ycp-killer

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,37 +1,25 @@
-#
-# Makefile.am for restore/src
-#
-# $Id$
-#
+# Sources for restore
+
+module_DATA = \
+  modules/Restore.rb
+
+client_DATA = \
+  clients/restore.rb \
+  clients/restore_bootloader.rb \
+  clients/restore_auto.rb
 
 yncludedir = @yncludedir@/restore
-
-client_DATA =			\
-	restore.ycp		\
-	restore_auto.ycp	\
-	restore_bootloader.ycp
-
-ynclude_DATA =			\
-	helps.ycp		\
-	summary_dialog.ycp	\
-	ui.ycp
-
-desktop_DATA =			\
-	restore.desktop
-
-module_DATA =			\
-	Restore.ycp
+ynclude_DATA = \
+  include/restore/summary_dialog.rb \
+  include/restore/ui.rb \
+  include/restore/helps.rb
 
 ybin_SCRIPTS = \
-	restore_parse_pkginfo.pl
+  bin/restore_parse_pkginfo.pl
+
+desktop_DATA = \
+  desktop/restore.desktop
+
+EXTRA_DIST = $(module_DATA) $(client_DATA) $(ynclude_DATA) $(ybin_SCRIPTS) $(desktop_DATA)
 
 include $(top_srcdir)/Makefile.am.common
-
-restore:
-	ln -sf . restore
-
-ycpchook = restore
-
-YCPCFLAGS=-I.
-
-EXTRA_DIST = $(client_DATA) $(ynclude_DATA) $(module_DATA) $(desktop_DATA) $(ybin_SCRIPTS)
